cmake_minimum_required(VERSION 3.10)
project(Cpp_Primer)

set(CMAKE_CXX_STANDARD 14)

include_directories(headers)


add_executable(ex1_1 chapter-1/ex1_1.cpp)
add_executable(ex1_2 chapter-1/ex1_2.cpp)
add_executable(ex1_3 chapter-1/ex1_3.cpp)
add_executable(ex1_4 chapter-1/ex1_4.cpp)
add_executable(ex1_6 chapter-1/ex1_6.cpp)
add_executable(ex1_11 chapter-1/ex1_11.cpp)
add_executable(ex1_10 chapter-1/ex1_10.cpp)
add_executable(ex1_9 chapter-1/ex1_9.cpp)
add_executable(ex1_12 chapter-1/ex1_12.cpp)
add_executable(ex1_16 chapter-1/ex1_16.cpp)
add_executable(ex1_22 chapter-1/ex1_22.cpp)
add_executable(ex1_21 chapter-1/ex1_21.cpp)
add_executable(ex2_3 chapter-2/ex2_3.cpp)
add_executable(ex2_10 chapter-2/ex2_10.cpp)
add_executable(ex2_14 chapter-2/ex2_14.cpp)
add_executable(ex2_16 chapter-2/ex2_16.cpp)
add_executable(ex2_17 chapter-2/ex2_17.cpp)
add_executable(ex2_39 chapter-2/ex2_39.cpp)
add_executable(ex2_40 chapter-2/ex2_40.cpp)
add_executable(code chapter-3/code.cpp)
add_executable(ex3_4 chapter-3/ex3_4.cpp)
add_executable(ex3_5 chapter-3/ex3_5.cpp)
add_executable(ex3_11 chapter-3/ex3_11.cpp)
add_executable(ex3_14_15 chapter-3/ex3_14_15.cpp)
add_executable(ex3_16 chapter-3/ex3_16.cpp)
add_executable(ex3_23 chapter-3/ex3_23.cpp)
add_executable(binarySearch chapter-3/binarySearch.cpp)
add_executable(ex3_37 chapter-3/ex3_37.cpp)
add_executable(ex6_9 chapter-6/ex6_9.cpp)
add_executable(ex6_10 chapter-6/ex6_10.cpp)
add_executable(ex6_17 chapter-6/ex6_17.cpp)
add_executable(ex6_21_22_23_24 chapter-6/ex6_21_22_23_24.cpp)
add_executable(ex6_32 chapter-6/ex6_32.cpp)
add_executable(ex6_33 chapter-6/ex6_33.cpp)
add_executable(shorterString chapter-6/shorterString.cpp)
add_executable(ex6_42 chapter-6/ex6_42.cpp)
add_executable(ex6_44 chapter-6/ex6_44.cpp)
add_executable(ex6_51 chapter-6/ex6_51.cpp)
add_executable(ex6_54_55_56 chapter-6/ex6_54_55_56.cpp)
add_executable(Sales_data chapter-7/Sales_data.cpp)
add_executable(Person chapter-7/Person.cpp)

add_executable(ex7_11 chapter-7/ex7_11.cpp chapter-7/Sales_data.cpp)
add_executable(Screen chapter-7/Screen.cpp)
add_executable(ex7_27 chapter-7/ex7_27.cpp chapter-7/Screen.cpp)
add_executable(ex7_31 chapter-7/ex7_31.cpp)
add_executable(Window_mgr chapter-7/Window_mgr.cpp)
add_executable(ex7_35 chapter-7/ex7_35.cpp)
add_executable(ex7_53 chapter-7/ex7_53.cpp)
add_executable(Account chapter-7/Account.cpp)
add_executable(example_static chapter-7/example_static.cpp)
add_executable(ex8_1 chapter-8/ex8_1.cpp)
add_executable(main chapter-8/main.cpp)
add_executable(ex8_4_5_6 chapter-8/ex8_4_5_6.cpp chapter-7/Sales_data.cpp)
add_executable(ex9_2 chapter-9/ex9_2.cpp)
add_executable(ex9_4_5 chapter-9/ex9_4_5.cpp)
add_executable(ex9_11 chapter-9/ex9_11.cpp)

add_executable(ex9_13 chapter-9/ex9_13.cpp)
add_executable(chapter9_main chapter-9/chapter9_main.cpp)
add_executable(ex9_14 chapter-9/ex9_14.cpp)
add_executable(ex9_18_19_20_21 chapter-9/ex9_18_19_20_21.cpp)
add_executable(ex9_23_24 chapter-9/ex9_23_24.cpp)
add_executable(ex9_25_26 chapter-9/ex9_25_26.cpp)
add_executable(ex9_27_28 chapter-9/ex9_27_28.cpp)
add_executable(ex9_31 chapter-9/ex9_31.cpp)
add_executable(chapter9_4 chapter-9/chapter9_4.cpp)
add_executable(ex9_41_42 chapter-9/ex9_41_42.cpp)
add_executable(ex9_50 chapter-9/ex9_50.cpp)
add_executable(ex10_1 chapter-10/ex10_1.cpp)
add_executable(ex10_3 chapter-10/ex10_3.cpp)
add_executable(chapter10_main chapter-10/chapter10_main.cpp)
add_executable(ex10_6_7_8 chapter-10/ex10_6_7_8.cpp)
add_executable(chapter10_3 chapter-10/chapter10_3.cpp)

add_executable(ex10_12 chapter-10/ex10_12.cpp chapter-7/Sales_data.cpp)
add_executable(ex10_13 chapter-10/ex10_13.cpp)
add_executable(ex10_14_15 chapter-10/ex10_14_15.cpp)
add_executable(lambda chapter-10/lambda.cpp)
add_executable(ex10_20_21 chapter-10/ex10_20_21.cpp)
add_executable(ex10_22_24_25 chapter-10/ex10_22_24_25.cpp)
add_executable(ex10_27_28 chapter-10/ex10_27_28.cpp)
add_executable(io_iterator chapter-10/io_iterator.cpp)
add_executable(ex_10_29_30_31_32_33 chapter-10/ex_10_29_30_31_32_33.cpp)
add_executable(wordcount chapter-11/wordcount.cpp)
add_executable(multiset chapter-11/multiset.cpp)
add_executable(ex11_9 chapter-11/ex11_9.cpp)
add_executable(ex11_11 chapter-11/ex11_11.cpp)
add_executable(ex11_12 chapter-11/ex11_12.cpp)
add_executable(chapter11_main chapter-11/chapter11_main.cpp)
add_executable(multi_search chapter-11/multi_search.cpp)
add_executable(text_transform chapter-11/text_transform.cpp)